--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: "17"
 
       - name: Setup Gradle
-        uses: gradle/actions@v5.0.0
+        uses: gradle/actions/setup-gradle@v5.0.0
 
       - name: Build and Publish Plugin
         run: ./gradlew build publishPlugin
