--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.kotlin
+.intellijPlatform
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
